--- a/Source/ZEditor/ZEDSceneEditor/ZEDSceneEditor.ui
+++ b/Source/ZEditor/ZEDSceneEditor/ZEDSceneEditor.ui
@@ -20,7 +20,7 @@
    <string>ZEditor</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../EditorVisuals/MapEditor.qrc">
+   <iconset>
     <normaloff>:/ApplicationIcon/ZEDITOR.ico</normaloff>:/ApplicationIcon/ZEDITOR.ico</iconset>
   </property>
   <property name="styleSheet">
@@ -252,7 +252,7 @@
      <x>0</x>
      <y>0</y>
      <width>1307</width>
-     <height>22</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -359,15 +359,6 @@
     <addaction name="separator"/>
     <addaction name="CopyAction"/>
    </widget>
-   <widget class="QMenu" name="menuVegetation">
-    <property name="title">
-     <string>Vegetation</string>
-    </property>
-    <addaction name="actionGenerate_Random_Tree"/>
-    <addaction name="actionGenerate_Random_Bush"/>
-    <addaction name="actionGenerate_Random_Flower"/>
-    <addaction name="actionGenerate_Random_Grass_Area"/>
-   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit_2"/>
    <addaction name="menuEdit"/>
@@ -375,7 +366,6 @@
    <addaction name="menuScene_Options"/>
    <addaction name="menuEngine"/>
    <addaction name="menuHelp"/>
-   <addaction name="menuVegetation"/>
   </widget>
   <widget class="QDockWidget" name="AssertsWindow">
    <property name="minimumSize">
@@ -584,35 +574,12 @@
    <addaction name="UnhideAction"/>
    <addaction name="GridToogleAction"/>
   </widget>
-  <widget class="QToolBar" name="VegetationToolbar">
-   <property name="windowTitle">
-    <string>toolBar</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionGenerate_Random_Tree"/>
-   <addaction name="actionGenerate_Random_Bush"/>
-   <addaction name="actionGenerate_Random_Flower"/>
-   <addaction name="actionGenerate_Random_Grass_Area"/>
-  </widget>
   <action name="LoadAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/LoadMap.png</normaloff>:/ToolBarIcons/LoadMap.png</iconset>
-   </property>
    <property name="text">
     <string>Load Map</string>
    </property>
   </action>
   <action name="SaveAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Save.png</normaloff>:/ToolBarIcons/Save.png</iconset>
-   </property>
    <property name="text">
     <string>Save Scene</string>
    </property>
@@ -626,10 +593,6 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Rotate.png</normaloff>:/ToolBarIcons/Rotate.png</iconset>
-   </property>
    <property name="text">
     <string>Rotate</string>
    </property>
@@ -638,10 +601,6 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Move.png</normaloff>:/ToolBarIcons/Move.png</iconset>
-   </property>
    <property name="text">
     <string>Move</string>
    </property>
@@ -649,10 +608,6 @@
   <action name="ScaleAction">
    <property name="checkable">
     <bool>true</bool>
-   </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Scale.png</normaloff>:/ToolBarIcons/Scale.png</iconset>
    </property>
    <property name="text">
     <string>Scale</string>
@@ -679,10 +634,6 @@
    </property>
   </action>
   <action name="AssertsWindowOpenAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/AssertBrowser.png</normaloff>:/ToolBarIcons/AssertBrowser.png</iconset>
-   </property>
    <property name="text">
     <string>Asserts</string>
    </property>
@@ -709,46 +660,26 @@
    <property name="checked">
     <bool>true</bool>
    </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Select.png</normaloff>:/ToolBarIcons/Select.png</iconset>
-   </property>
    <property name="text">
     <string>Select</string>
    </property>
   </action>
   <action name="EntityBrowserOpenAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/EntitySelector.png</normaloff>:/ToolBarIcons/EntitySelector.png</iconset>
-   </property>
    <property name="text">
     <string>Entity Browser</string>
    </property>
   </action>
   <action name="DeleteAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Delete.png</normaloff>:/ToolBarIcons/Delete.png</iconset>
-   </property>
    <property name="text">
     <string>Delete</string>
    </property>
   </action>
   <action name="HideAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Hide.png</normaloff>:/ToolBarIcons/Hide.png</iconset>
-   </property>
    <property name="text">
     <string>Hide</string>
    </property>
   </action>
   <action name="UnhideAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Unhide.png</normaloff>:/ToolBarIcons/Unhide.png</iconset>
-   </property>
    <property name="text">
     <string>Unhide</string>
    </property>
@@ -804,10 +735,6 @@
    </property>
   </action>
   <action name="CopyAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Clone.png</normaloff>:/ToolBarIcons/Clone.png</iconset>
-   </property>
    <property name="text">
     <string>Clone</string>
    </property>
@@ -873,10 +800,6 @@
    </property>
   </action>
   <action name="GoToEntityAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Goto.png</normaloff>:/ToolBarIcons/Goto.png</iconset>
-   </property>
    <property name="text">
     <string>Go To Entity</string>
    </property>
@@ -892,10 +815,6 @@
    </property>
   </action>
   <action name="LoadSceneAction">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/LoadScene.png</normaloff>:/ToolBarIcons/LoadScene.png</iconset>
-   </property>
    <property name="text">
     <string>Load Scene</string>
    </property>
@@ -914,10 +833,6 @@
    </property>
   </action>
   <action name="actionUndo">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Undo.png</normaloff>:/ToolBarIcons/Undo.png</iconset>
-   </property>
    <property name="text">
     <string>Undo</string>
    </property>
@@ -926,10 +841,6 @@
    </property>
   </action>
   <action name="actionRedo">
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Redo.png</normaloff>:/ToolBarIcons/Redo.png</iconset>
-   </property>
    <property name="text">
     <string>Redo</string>
    </property>
@@ -944,10 +855,6 @@
    <property name="checked">
     <bool>false</bool>
    </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/SceneList.png</normaloff>:/ToolBarIcons/SceneList.png</iconset>
-   </property>
    <property name="text">
     <string>Scene List</string>
    </property>
@@ -958,10 +865,6 @@
    </property>
    <property name="checked">
     <bool>true</bool>
-   </property>
-   <property name="icon">
-    <iconset resource="../../EditorVisuals/MapEditor.qrc">
-     <normaloff>:/ToolBarIcons/Grid.png</normaloff>:/ToolBarIcons/Grid.png</iconset>
    </property>
    <property name="text">
     <string>Grid</string>
@@ -990,7 +893,7 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="../../EditorVisuals/MapEditor.qrc"/>
+  <include location="MapEditor.qrc"/>
  </resources>
  <connections>
   <connection>
