--- a/Source/ZETools/ZECrashReport/ProgressWindow.ui
+++ b/Source/ZETools/ZECrashReport/ProgressWindow.ui
@@ -23,7 +23,7 @@
    <string>Zinek Crash Report</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="zecrashreportui.qrc">
+   <iconset>
     <normaloff>:/ZECrashReportUI/ZinekEngineIcon.ico</normaloff>:/ZECrashReportUI/ZinekEngineIcon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -226,8 +226,17 @@
           </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
+            <property name="leftMargin">
+             <number>10</number>
+            </property>
             <item>
              <widget class="QLabel" name="lblProgress">
+              <property name="font">
+               <font>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="text">
                <string>Progress..</string>
               </property>
@@ -277,8 +286,17 @@
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <layout class="QGridLayout" name="gridLayout">
+              <property name="leftMargin">
+               <number>10</number>
+              </property>
+              <property name="topMargin">
+               <number>6</number>
+              </property>
+              <property name="bottomMargin">
+               <number>6</number>
+              </property>
               <property name="verticalSpacing">
-               <number>0</number>
+               <number>3</number>
               </property>
               <item row="1" column="0">
                <widget class="QLabel" name="label_4">
@@ -332,7 +350,11 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_4"/>
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+         </layout>
         </item>
         <item>
          <spacer name="horizontalSpacer_4">
@@ -377,6 +399,13 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btnCLose">
+          <property name="text">
+           <string>Close</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btnSendInBack">
