--- a/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/ZEDSHMainWindow.ui
+++ b/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/ZEDSHMainWindow.ui
@@ -46,9 +46,14 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <widget class="QMenu" name="mnuRecentFiles">
+     <property name="title">
+      <string>Recent</string>
+     </property>
+    </widget>
     <addaction name="actNew"/>
     <addaction name="actOpen"/>
-    <addaction name="actRecent"/>
+    <addaction name="mnuRecentFiles"/>
     <addaction name="separator"/>
     <addaction name="actLoadShader"/>
     <addaction name="actUploadToEngine"/>
@@ -146,11 +151,6 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
-   </property>
-  </action>
-  <action name="actRecent">
-   <property name="text">
-    <string>Recent</string>
    </property>
   </action>
   <action name="actQuit">
